--- a/css/test.css
+++ b/css/test.css
@@ -100,7 +100,13 @@
   -webkit-box-shadow: 0px 5px 3px #000;
     border-bottom-color: 5px #000;
 }
+.btn-add-cart{
+  margin-bottom: 2rem;
+}
+.btn-cart{
+  position: fixed;
 
+}
 .triangle-left {
   position: absolute;
     width: 0;
