--- a/css/test.css
+++ b/css/test.css
@@ -9,6 +9,16 @@
 }
 .banner{
   /* background-color: grey; */
+  /* width: 100%; */
+  /* position: relative; */
+  /* display: flex; */
+  height: 450px;
+  width: 100%;
+  background-image: url('../img/banner/hihi.jpg');
+  background-size: 100 100;
+  background-repeat: round;
+}
+.banner img{
   width: 100%;
 }
 .product-detail{
@@ -24,6 +34,7 @@
     /* width: 99%; */
     margin: auto;
     text-align: center;
+    position: absolute;
     
 }
 .sticky{
@@ -69,6 +80,7 @@
   background-color: #fff;
   /* text-align: center; */
 }
+
 
 /* product */
 .product-container{
@@ -142,8 +154,14 @@
   background-color: #ffe5b0;
   color: #000000;
 }
-.cus-table thead tr th,.cus-table tbody tr td, .table tr td{
+.table_cus thead tr th,.table_cus tr td, .table_cus tr td{
   text-align: center;
+}
+.table_cus tr td{
+  padding-top: 10px;
+}
+.tr_custom td{
+  margin-top: 30px
 }
 /* responsive */
 @media screen and (max-width: 768px){
